# ocr_gpu_test

./: LICENSE  pyproject.toml  test.py
Result of RTX4070 Super/: output_easyocr_2025-08-28_18-10-28_avg37.53s.md
