[project]
name = "docling-benchmark-lhdn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "docling-serve[ui]>=1.3.1",
    "docling>=2.47.1",
    "rapidocr-onnxruntime>=1.4.4",
    "tesserocr>=2.8.0",
    "pymupdf>=1.26.4",
    "gputil>=1.4.0",
]
